@@ -101,4 +101,9 @@ public final class NoOutputs extends Outputs<Object> {
   public String outputToString(Object output) {
     return "";
   }
+
+  @Override
+  public long ramBytesUsed(Object output) {
+    return 0;
+  }
 }
